class Instrument {
  constructor(type, kind, model, price, seller) {
    this.type = type
    this.kind = kind
    this.model = model
    this.price = price
    this.seller = seller
  }
}

module.exports = Instrument
